# Microcraft

./: CMakeLists.txt  README.md  mkdocs.yml
archives/: Microcraft_E2_macosx
docs/: _ext_style.css  doc-test1.md  index.md  microcraft-e1.md
docs/series-1/: microcraft-e1.md  microcraft-e2.md
extarchives/: Microcraft_E1_macosx
src/: main.cpp
